--- a/infopedia/karir.html
+++ b/infopedia/karir.html
@@ -46,8 +46,6 @@
             </div>
         </div>
         <!-- Spinner End -->
-
-
         <!-- Navbar & Hero Start -->
         <div class="container-xxl position-relative p-0">
             <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
@@ -62,7 +60,7 @@
                     <div class="navbar-nav mx-auto py-0">
                         <a href="pengertian.html" class="nav-item nav-link">Pengertian Informatika</a>
                         <a href="karir.html" class="nav-item nav-link">Peluang Kerja</a>
-                        <a href="project.html" class="nav-item nav-link">Riset Pemograman</a>
+                        <a href="riset.html" class="nav-item nav-link activr">Riset Pemograman</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pemograman</a>
                             <div class="dropdown-menu m-0">
@@ -110,7 +108,6 @@
 
 
         <div class="offers">
-
             <!-- Offers -->
             <div class="container">
                 <div class="row">
