--- a/infopedia/pengertian.html
+++ b/infopedia/pengertian.html
@@ -66,7 +66,7 @@
                     <div class="navbar-nav mx-auto py-0">
                         <a href="pengertian.html" class="nav-item nav-link">Pengertian Informatika</a>
                         <a href="karir.html" class="nav-item nav-link">Peluang Kerja</a>
-                        <a href="project.html" class="nav-item nav-link">Riset Pemograman</a>
+                        <a href="riset.html" class="nav-item nav-link activr">Riset Pemograman</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pemograman</a>
                             <div class="dropdown-menu m-0">
@@ -78,7 +78,6 @@
                     </div>
                 </div>
             </nav>
-
             <div class="container-xxl py-5 bg-primary hero-header">
                 <div class="container my-5 py-5 px-lg-5">
                     <div class="row g-5 py-5">
@@ -243,7 +242,9 @@
                                                     <p class="mb-2">
                                                         - Mengembangkan atau membuat alat dan aplikasi komputer yang
                                                         inovatif.
+                                                        <br />
                                                         - Mendukung penggunaan teknologi yang intuitif.
+                                                        <br />
                                                         - Jelajahi bagaimana komputasi membentuk hubungan, organisasi,
                                                         dan dunia kita.
 
@@ -261,36 +262,41 @@
                                                 </h3>
                                             </div>
                                             <div class="col-xxl-12 text-black">
-                                                <center>
-                                                    <p class="mb-2">
-                                                        Dalam arti yang lebih luas, ilmu komputer mencakup beberapa
-                                                        aspek.
-                                                        - Teori informasi, yang mempelajari konsep matematika dari
-                                                        informasi
-                                                        - Ilmu informasi yang mempelajari bagaimana informasi
-                                                        dikumpulkan, diklasifikasikan, dimanipulasi, disimpan, diambil,
-                                                        dan didistribusikan untuk tujuan sosial dan komunitas.
-                                                        - Teknik Informatika dan Komputer yang berhubungan dengan
-                                                        pemrosesan, pengarsipan, dan penyebaran informasi menggunakan
-                                                        teknologi informasi dan pemrograman berbantuan komputer.
-                                                        - Sistem Informasi, yang mempelajari teknik untuk mengembangkan
-                                                        sistem yang memproses informasi yang ada dari berbagai jenis.
-                                                        - Keamanan informasi adalah ilmu yang mempelajari proses
-                                                        melindungi dan melindungi data pada sistem atau komputer yang
-                                                        ada.
-                                                        - Informatika sosial mengkaji dimensi sosial TIK dalam perubahan
-                                                        sosial dan organisasi, penggunaan teknologi dalam konteks
-                                                        sosial, dan cara institusi sosial teknologi informasi
-                                                        dipengaruhi oleh kekuatan sosial dan praktik sosial/sosial
-                                                        meningkat.
-                                                        Dalam pemahaman saya, ilmu komputer memiliki dimensi akademis
-                                                        untuk menguasai bidang ilmu komputer yang cukup luas.
-                                                        Informatika Masa Depan Perspektif dunia kerja masa depan
-                                                        Informatika adalah catatan para profesional ilmu komputer karena
-                                                        diperlukan di semua bidang ilmu.
+                                                <p class="mb-2" align="justify">
+                                                   <center> Dalam arti yang lebih luas, ilmu komputer mencakup beberapa
+                                                    aspek.</center>
+                                                    <br />
+                                                    - Teori informasi, yang mempelajari konsep matematika dari
+                                                    informasi
+                                                    <br />
+                                                    - Ilmu informasi yang mempelajari bagaimana informasi
+                                                    dikumpulkan, diklasifikasikan, dimanipulasi, disimpan, diambil,
+                                                    dan didistribusikan untuk tujuan sosial dan komunitas.
+                                                    <br />
+                                                    - Teknik Informatika dan Komputer yang berhubungan dengan
+                                                    pemrosesan, pengarsipan, dan penyebaran informasi menggunakan
+                                                    teknologi informasi dan pemrograman berbantuan komputer.
+                                                    <br />
+                                                    - Sistem Informasi, yang mempelajari teknik untuk mengembangkan
+                                                    sistem yang memproses informasi yang ada dari berbagai jenis.
+                                                    <br />
+                                                    - Keamanan informasi adalah ilmu yang mempelajari proses
+                                                    melindungi dan melindungi data pada sistem atau komputer yang
+                                                    ada.
+                                                    <br />
+                                                    - Informatika sosial mengkaji dimensi sosial TIK dalam perubahan
+                                                    sosial dan organisasi, penggunaan teknologi dalam konteks
+                                                    sosial, dan cara institusi sosial teknologi informasi
+                                                    dipengaruhi oleh kekuatan sosial dan praktik sosial/sosial
+                                                    meningkat.
+                                                    <br />
+                                                    Dalam pemahaman saya, ilmu komputer memiliki dimensi akademis
+                                                    untuk menguasai bidang ilmu komputer yang cukup luas.
+                                                    Informatika Masa Depan Perspektif dunia kerja masa depan
+                                                    Informatika adalah catatan para profesional ilmu komputer karena
+                                                    diperlukan di semua bidang ilmu.
 
-                                                    </p>
-                                                </center>
+                                                </p>
                                             </div>
                                         </div>
                                     </div>
