--- a/infopedia/index.html
+++ b/infopedia/index.html
@@ -30,7 +30,11 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/landing.css" rel="stylesheet">
+    <link rel="stylesheet" href="plugins/slick-carousel/slick/slick.css">
+    <link rel="stylesheet" href="plugins/slick-carousel/slick/slick-theme.css">
+  
+    
 </head>
 
 <body>
@@ -59,7 +63,7 @@
                     <div class="navbar-nav mx-auto py-0">
                         <a href="pengertian.html" class="nav-item nav-link">Pengertian Informatika</a>
                         <a href="karir.html" class="nav-item nav-link">Peluang Kerja</a>
-                        <a href="project.html" class="nav-item nav-link">Riset Pemograman</a>
+                        <a href="riset.html" class="nav-item nav-link activr">Riset Pemograman</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pemograman</a>
                             <div class="dropdown-menu m-0">
@@ -71,6 +75,7 @@
                     </div>
                 </div>
             </nav>
+
             <div class="container-xxl bg-primary hero-header">
                 <div class="container px-lg-5">
                     <div class="row g-5 align-items-end">
@@ -84,20 +89,203 @@
         </div>
         <!-- Navbar & Hero End -->
 
-                <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="container px-lg-5 text-center">
-                        <div class="row justify-content-center">
-                            <div class="col-lg-6">
-                                <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                                <h1 class="display-1">404</h1>
-                                <h1 class="mb-4">Page Not Found</h1>
-                                <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website!
-                                    Maybe go to our home page or try to use a search?</p>
-                                <a class="btn btn-primary rounded-pill py-3 px-5" href="">Go Back To Home</a>
+        <div class="section clients">        
+            <div class="container">
+                <div class="row clients-logo">
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/1.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                    <div class="col-lg-2">
+                        <div class="client-thumb">
+                            <img src="img/2.png" alt="" class="img-fluid">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+
+
+        <!-- About Infopedia -->
+        <div class="container-xxl py-5">
+            <div class="container px-lg-5">
+                <div class="row g-5">
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="section-title position-relative mb-4 pb-2">
+                            <h2 class="mt-2">Keunggulan 
+                                <br/>Informatic Pedia</h2>
+                        </div>
+                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu
+                            diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem
+                            sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet</p>
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>Award Winning</h6>
+                                <h6 class="mb-0"><i class="fa fa-check text-primary me-2"></i>Professional Staff</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>24/7 Support</h6>
+                                <h6 class="mb-0"><i class="fa fa-check text-primary me-2"></i>Fair Prices</h6>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.jpg">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- About End -->
+
+        <div class="container-xxl py-5">
+            <div class="container px-lg-5">
+                <h2 class="mt-2">Apa Saja Yang Ada di Informatic Pedia ?</h2>
+                <p class="mt-2">Tersedia materi seputar Informatika, dimana setiap materinya terdapat penjelasan yang
+                    singkat dan mudah dipahami.</p>
+
+
+                <div class="row g-4">
+                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+                            <div class="service-icon flex-shrink-0">
+                                <i class="fa fa-home fa-2x"></i>
+                            </div>
+                            <h5 class="mb-3">Pengertian & Sejarah Informatika</h5>
+                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed
+                                stet lorem.</p>
+                            <a class="btn px-3 mt-auto mx-auto" href="pengertian.html">Baca lebih Lanjut</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+                            <div class="service-icon flex-shrink-0">
+                                <i class="fa fa-home fa-2x"></i>
+                            </div>
+                            <h5 class="mb-3">Pengertian Dasar
+                                Pemrograman</h5>
+                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed
+                                stet lorem.</p>
+                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+                            <div class="service-icon flex-shrink-0">
+                                <i class="fa fa-home fa-2x"></i>
+                            </div>
+                            <h5 class="mb-3">Social Media Marketing</h5>
+                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed
+                                stet lorem.</p>
+                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.1s">
+                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+                            <div class="service-icon flex-shrink-0">
+                                <i class="fa fa-home fa-2x"></i>
+                            </div>
+                            <h5 class="mb-3">Email Marketing</h5>
+                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed
+                                stet lorem.</p>
+                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.3s">
+                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+                            <div class="service-icon flex-shrink-0">
+                                <i class="fa fa-home fa-2x"></i>
+                            </div>
+                            <h5 class="mb-3">PPC Advertising</h5>
+                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed
+                                stet lorem.</p>
+                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 wow zoomIn" data-wow-delay="0.6s">
+                        <div class="service-item d-flex flex-column justify-content-center text-center rounded">
+                            <div class="service-icon flex-shrink-0">
+                                <i class="fa fa-home fa-2x"></i>
+                            </div>
+                            <h5 class="mb-3">App Development</h5>
+                            <p>Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed
+                                stet lorem.</p>
+                            <a class="btn px-3 mt-auto mx-auto" href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-xxl py-5">
+            <div class="container px-lg-5">
+                <div class="row g-5">
+                    <div class="col-lg-6">
+                        <img class="img-fluid wow zoomIn" data-wow-delay="0.5s" src="img/about.jpg">
+                    </div>
+                    <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="section-title position-relative mb-4 pb-2">
+                            <h2 class="mt-2">Keunggulan 
+                                <br/>Informatic Pedia</h2>
+                        </div>
+                        <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu
+                            diam amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem
+                            sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet</p>
+                        <div class="row g-3">
+                            <div class="col-sm-6">
+                                <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>Award Winning</h6>
+                                <h6 class="mb-0"><i class="fa fa-check text-primary me-2"></i>Professional Staff</h6>
+                            </div>
+                            <div class="col-sm-6">
+                                <h6 class="mb-3"><i class="fa fa-check text-primary me-2"></i>24/7 Support</h6>
+                                <h6 class="mb-0"><i class="fa fa-check text-primary me-2"></i>Fair Prices</h6>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
 
         <!-- Footer Start -->
         <div class="container-fluid bg-primary text-light footer wow fadeIn" data-wow-delay="0.1s">
@@ -150,12 +338,6 @@
                         <p class="section-title text-white h5 mb-4">Newsletter<span></span></p>
                         <p>Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit
                             non vulpu</p>
-                        <div class="position-relative w-100 mt-3">
-                            <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text"
-                                placeholder="Your Email" style="height: 48px;">
-                            <button type="button" class="btn shadow-none position-absolute top-0 end-0 mt-1 me-2"><i
-                                    class="fa fa-paper-plane text-primary fs-4"></i></button>
-                        </div>
                     </div>
                 </div>
             </div>
@@ -177,6 +359,8 @@
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="lib/isotope/isotope.pkgd.min.js"></script>
     <script src="lib/lightbox/js/lightbox.min.js"></script>
+    <script src="plugins/slick-carousel/slick/slick.min.js"></script>
+    <script src="js/script.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
